<resources>
    <string name="app_name">Taskward</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_botton_bar_task">Hello blank fragment</string>
    <string name="menu_botton_bar_reward">Hello blank fragment</string>
    <string name="menu_botton_bar_profile">Hello blank fragment</string>


    <!-- ================== Task Fragment ================== -->
    <string name="tasks_title">tasks</string>

    <string name="all_tasks_header">all</string>

    <string name="points_earned">+%1$d</string>

    <!-- ================== Rewards Fragment ================== -->
    <string name="rewards_title">rewards</string>

    <string name="to_get_rewards_header">to get</string>

    <!-- ================== Profile Fragment ================== -->
    <string name="profile_title">profile</string>

    <string name="profile_statistics_header">statistics</string>

    <string name="profile_statistics_task">task</string>">
    <string name="profile_statistics_done">done</string>

    <!-- ================== Create Task Fragment ================== -->
    <string name="create_task">create task</string>

    <string name="create_task_title">title</string>
    <string name="create_task_description">description</string>
    <string name="create_task_frequency">frequency</string>
    <string name="create_task_frequency_value">Every</string>
    <string name="create_task_frequency_repeat">Always repeat</string>
    <string name="create_task_start_date">start date</string>
    <string name="create_task_end_date">end date</string>
    <string name="create_task_difficulty">difficulty</string>

    <string name="create_task_input_title">enter task title</string>
    <string name="create_task_input_description">enter task description</string>
    <string name="create_task_input_frequency">select frequency</string>
    <string name="create_task_input_start_date">select start date</string>
    <string name="create_task_input_end_date">select end date</string>

    <!-- ================== Create Reward Fragment ================== -->
    <string name="create_reward">create reward</string>

    <string name="create_reward_title">title</string>
    <string name="create_reward_description">description</string>
    <string name="create_reward_points">points</string>

    <string name="create_reward_input_title">enter reward title</string>
    <string name="create_reward_input_description">enter reward description</string>
    <string name="create_reward_input_points">enter reward points required</string>

    <!-- ================== Create Profile Fragment ================== -->
    <string name="create_profile">create profile</string>

    <string name="create_profile_name">name</string>
    <string name="create_profile_email">email</string>

    <string name="create_profile_input_name">enter name</string>
    <string name="create_profile_input_email">enter email</string>

    <string name="create_profile_picture_description">Choose an image for your profile picture</string>

    <string name="create_rewards_description">description</string>
</resources>