<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.ilp506.taskward.ui.fragments.TasksFragment"
        android:label="@string/tasks_title">
        <action
            android:id="@+id/action_tasksFragment_to_createTaskFragment"
            app:destination="@id/createTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/rewardsFragment"
        android:name="com.ilp506.taskward.ui.fragments.RewardsFragment"
        android:label="@string/rewards_title" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ilp506.taskward.ui.fragments.ProfileFragment"
        android:label="@string/profile_title" />

    <fragment
        android:id="@+id/createTaskFragment"
        android:name="com.ilp506.taskward.ui.fragments.CreateTaskFragment"
        android:label="@string/tasks_title" />

    <fragment
        android:id="@+id/createProfileFragment"
        android:name="com.ilp506.taskward.ui.fragments.CreateProfileFragment"
        android:label="@string/profile_title">
        <action
            android:id="@+id/action_createProfileFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <action
        android:id="@+id/action_global_to_createProfileFragment"
        app:destination="@id/createProfileFragment"
        />
</navigation>
