<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="18dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/pink_500_50">

        <!-- Container Title -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTaskTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelTaskTitle"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_task_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTaskTitle"
                style="@style/CustomFormInputBoxStyle"
                android:hint="@string/create_task_input_title"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/textLabelTaskTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Description -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTaskDescription"
            app:layout_constraintTop_toBottomOf="@id/layoutTaskTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelTaskDescription"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_task_description"
                android:labelFor="@id/editTaskDescription"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTaskDescription"
                style="@style/CustomFormInputBoxStyle"
                android:hint="@string/create_task_input_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:maxLines="3"
                app:layout_constraintTop_toBottomOf="@id/textLabelTaskDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Frequency -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTaskFrequency"
            app:layout_constraintTop_toBottomOf="@id/layoutTaskDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelTaskFrequency"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_task_frequency"
                android:labelFor="@id/spinnerTaskFrequency"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerTaskFrequency"
                style="@style/CustomFormInputBoxStyle"
                android:entries="@array/frequency_options"
                android:hint="@string/create_task_input_frequency"
                app:layout_constraintTop_toBottomOf="@id/textLabelTaskFrequency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Date -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTaskDate"
            app:layout_constraintTop_toBottomOf="@id/layoutTaskFrequency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            style="@style/CustomFormContainerStyle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTaskStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layoutTaskEndDate">

                <TextView
                    android:id="@+id/textLabelTaskStartDate"
                    style="@style/CustomFormLabelStyle"
                    android:text="@string/create_task_start_date"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTaskStartDate"
                    style="@style/CustomFormDateBoxStyle"
                    android:hint="@string/create_task_input_start_date"
                    android:autofillHints="startDate"
                    app:layout_constraintTop_toBottomOf="@id/textLabelTaskStartDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTaskEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutTaskStartDate"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/textLabelTaskEndDate"
                    style="@style/CustomFormLabelStyle"
                    android:text="@string/create_task_end_date"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTaskEndDate"
                    style="@style/CustomFormDateBoxStyle"
                    android:hint="@string/create_task_input_end_date"
                    android:autofillHints="endDate"
                    app:layout_constraintTop_toBottomOf="@id/textLabelTaskEndDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Difficulty -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTaskDifficulty"
            app:layout_constraintTop_toBottomOf="@id/layoutTaskDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelTaskDifficulty"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_task_difficulty"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderTaskDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="5"
                android:stepSize="1"
                app:trackColorInactive="@color/white_100"
                app:trackColorActive="@color/pink_500"
                app:thumbColor="@color/pink_500"
                app:haloColor="@color/pink_500"
                app:tickColor="@color/pink_500"
                style="@style/CustomSliderStyle"
                app:layout_constraintTop_toBottomOf="@id/textLabelTaskDifficulty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
