<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutForm"
        style="@style/CustomFormStyle"
        android:backgroundTint="@color/blue_300">

        <!-- Container Reward Icon -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRewardIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"
            style="@style/CustomFormContainerStyle">

            <ImageButton
                android:id="@+id/buttonRewardIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/ic_menu_reward"
                android:background="@null"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Title -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRewardTitle"
            app:layout_constraintTop_toBottomOf="@id/layoutRewardIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelRewardTitle"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_reward_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editRewardTitle"
                style="@style/CustomFormInputBoxStyle"
                android:hint="@string/create_reward_input_title"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/textLabelRewardTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="LabelFor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Description -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRewardDescription"
            app:layout_constraintTop_toBottomOf="@id/layoutRewardTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelRewardDescription"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_reward_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editRewardDescription"
                style="@style/CustomFormInputBoxStyle"
                android:hint="@string/create_reward_input_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:maxLines="3"
                app:layout_constraintTop_toBottomOf="@id/textLabelRewardDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Points -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRewardPoints"
            app:layout_constraintTop_toBottomOf="@id/layoutRewardDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <TextView
                android:id="@+id/textLabelRewardPoints"
                style="@style/CustomFormLabelStyle"
                android:text="@string/create_reward_points"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editRewardPoints"
                style="@style/CustomFormInputBoxStyle"
                android:paddingStart="30dp"
                android:hint="@string/create_reward_input_points"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/textLabelRewardPoints"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iconEditRewardPoints"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="@id/editRewardPoints"
                app:layout_constraintStart_toStartOf="@id/editRewardPoints"
                app:layout_constraintBottom_toBottomOf="@id/editRewardPoints"
                app:tint="@color/blue_500" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Container Create -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCreateReward"
            app:layout_constraintTop_toBottomOf="@id/layoutRewardPoints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomFormContainerStyle">

            <ImageButton
                android:id="@+id/buttonCreateReward"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_plus"
                android:contentDescription="@string/create_reward"
                style="@style/CustomBlueButtonStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
