<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Container Profile Picture -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutProfilePicture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        style="@style/CustomFormContainerStyle">

        <ImageButton
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/create_profile_picture_description"
            android:src="@drawable/ic_user_profile"
            android:background="@null"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profileName" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readexpro_semibold"
            android:textSize="32sp"
            android:textColor="@color/yellow_500"
            app:layout_constraintTop_toBottomOf="@id/profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Container Title -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitleStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <include
            android:id="@+id/titleFragment"
            layout="@layout/title_fragment" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Container Statistics -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLabelStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTitleStatistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textLabelStatisticsTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_statistics_task"
            android:fontFamily="@font/readexpro_semibold"
            android:textSize="24sp"
            android:textColor="@color/gray_500_50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textLabelStatisticsDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_statistics_done"
            android:fontFamily="@font/readexpro_semibold"
            android:textSize="24sp"
            android:textColor="@color/gray_500_50"
            android:layout_marginRight="7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlHardcoded" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/textLabelStatisticsTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
